5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1585_2894.log
== SUBMITION (2019-03-21 11:34:10) 
-- CODE:
int site1=input()
int preco1=site1+45;
int site2=input()
int preco2=site2+45;
int site3=input()
int preco3=site3+45;
int site4=input()
int preco4=site4+45;
int site5=input()
int preco5=site5+45;
int site6=input()
int preco6=site6+45;
int site7=input()
int preco7=site7+45;
int site8=input()
int preco8=site8+45;

print(preco1+preco2+preco3+preco4+preco5+preco6+preco7+preco8);

-- EXECUTION TIME:
0.121081
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 1
    int site1=input()
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:35:36) 
-- CODE:
int preco=input()

preco2=preco1*8+45

print(preco2)
-- EXECUTION TIME:
0.18104
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 1
    int preco=input()
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:36:09) 
-- CODE:
float preco=input()

float preco2=preco1*8+45

print(preco2)
-- EXECUTION TIME:
0.230063
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 1
    float preco=input()
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:36:19) 
-- CODE:
float preco=input()

float preco2=preco*8+45

print(preco2)
-- EXECUTION TIME:
0.197623
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 1
    float preco=input()
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:21) 
-- CODE:
float preco=input()

float preco2=preco*8+45

print(preco2)
-- ERROR:
File "XXXX", line 1
    float preco=input()
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:36:56) 
-- CODE:
float preco=input();

float preco2=preco*8+45

print(preco2)
-- EXECUTION TIME:
0.110559
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 1
    float preco=input();
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:36:58) 
-- CODE:
float preco=input();

float preco2=preco*8+45

print(preco2)
-- ERROR:
File "XXXX", line 1
    float preco=input();
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:37:24) 
-- CODE:
float (preco=input())

float preco2=preco*8+45

print(preco2)
-- EXECUTION TIME:
0.152535
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 3
    float preco2=preco*8+45
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:26) 
-- CODE:
float (preco=input())

float preco2=preco*8+45

print(preco2)
-- ERROR:
File "XXXX", line 3
    float preco2=preco*8+45
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:49) 
-- CODE:
float (preco=input())

float (preco2=preco*8+45)
	

print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float (preco=input())
TypeError: 'preco' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:27) 
-- CODE:
preco=input()
float(preco)
preco2=preco*8+45
float (preco2)
	

print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco2=preco*8+45
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:53) 
-- CODE:
preco=input()
float(preco)
float preco2=preco*8+45
float (preco2)
	

print(preco2)
-- ERROR:
File "XXXX", line 3
    float preco2=preco*8+45
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:07) 
-- CODE:
preco=input()
float(preco)
float (preco2=preco*8+45)
float (preco2)
	

print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    float (preco2=preco*8+45)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:39) 
-- CODE:
float (preco=input())
float(preco)
float (preco2=preco*8+45)
float (preco2)
	

print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float (preco=input())
TypeError: 'preco' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:39) 
-- CODE:
 int preco=0
float (preco=input())
float(preco)
float (preco2=preco*8+45)
float (preco2)
	

print(preco2)
-- ERROR:
File "XXXX", line 1
    int preco=0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:09) 
-- CODE:
preco=0
float (preco=input())
float(preco)
float (preco2=preco*8+45)
float (preco2)
	

print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    float (preco=input())
TypeError: 'preco' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:18) 
-- CODE:
float preco= input();
 float preco1=preco*8+45;

print(preco1);
-- ERROR:
File "XXXX", line 1
    float preco= input();
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:58) 
-- CODE:
preco=0;
float preco= input();

 float preco1=preco*8+45;

print(preco1);
-- ERROR:
File "XXXX", line 2
    float preco= input();
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:15) 
-- CODE:
preco=0;
float( preco= input());

 float preco1=preco*8+45;

print(preco1);
-- ERROR:
File "XXXX", line 4
    float preco1=preco*8+45;
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:43) 
-- CODE:
preco=0;
float( preco= input());
preco1=0
 float( preco1=preco*8+45)

print(preco1);
-- ERROR:
File "XXXX", line 4
    float( preco1=preco*8+45)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:05) 
-- CODE:
preco=0;
float( preco= input());
preco1=0
 float( preco1=preco*8+45)

print(preco1);
-- ERROR:
File "XXXX", line 4
    float( preco1=preco*8+45)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:16) 
-- CODE:
preco=0;
float( preco= input());
preco1=0
float(preco1=preco*8+45)

print(preco1);
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    float( preco= input());
TypeError: 'preco' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:23) 
-- CODE:
preco=0;
float(preco= input());
preco1=0
float(preco1=preco*8+45)

print(preco1);
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    float(preco= input());
TypeError: 'preco' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:21) 
-- CODE:
preco=input()
float(preco);
preco1=preco*8+45;
float(preco1)
print(preco1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco1=preco*8+45;
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:26) 
-- CODE:
preco=input()
float(preco);
preco1=preco*8
float(preco1)
preco2=preco1+45
float(preco2)
print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    float(preco1)
ValueError: could not convert string to float: '1.231.231.231.231.231.231.231.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:55) 
-- CODE:
preco=input()
float(preco);
preco1=preco*8
float(preco1)
preco2=preco1+ float(45)
float(preco2)
print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    float(preco1)
ValueError: could not convert string to float: '1.231.231.231.231.231.231.231.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:31) 
-- CODE:
preco=input()
float(preco);
preco1=preco*8
float(preco1)
preco2=preco1+float(45)
float(preco2)
print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    float(preco1)
ValueError: could not convert string to float: '1.231.231.231.231.231.231.231.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:51:03) 
-- CODE:
preco=input()
float(preco);
preco1=preco*8
float(preco1)
preco2=preco1+45.0
float(preco2)
print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    float(preco1)
ValueError: could not convert string to float: '1.231.231.231.231.231.231.231.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:51:53) 
-- CODE:
preco=input()
float(preco);
preco1=preco*8
float(preco1)
preco2=preco1+45.0
float(preco2)
print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    float(preco1)
ValueError: could not convert string to float: '1.231.231.231.231.231.231.231.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:52:17) 
-- CODE:
preco=input()
float(preco);
preco1=preco*8.0
float(preco1)
preco2=preco1+45.0
float(preco2)
print(preco2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco1=preco*8.0
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:02) 
-- CODE:
preco=input()
preco=float()
preco1=preco*8+45
print(preco1)

-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:17) 
-- CODE:
preco=input()
preco=float()
preco1=preco*8+45
print(preco1)

-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:45) 
-- CODE:
preco=input()
preco=float()
preco1=,preco,*8+45
print(preco1)

-- ERROR:
File "XXXX", line 3
    preco1=,preco,*8+45
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:58) 
-- CODE:
preco=input()
preco=float()
preco1=(preco*8)+45
print(preco1)

-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:56:28) 
-- CODE:
preco=input()
preco=float(preco)
preco1=(preco*8)+45
print(preco1)

-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:57:08) 
-- CODE:
preco=input()
preco=float(preco)
preco1=(preco*8)+45
print(preco1)

-- EXECUTION TIME:
0.153104
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
